# rs_transcript_worker

./: Cargo.toml  Dockerfile  README.md
examples/: authot.json
src/: main.rs
src/authot/: authot_live_information.rs  mod.rs  start_recognition_information.rs  websocket_response.rs
